# api/InvestmentReporting.StateService.swagger.json
@@ -424,7 +424,7 @@
         }
       }
     },
-    "/Operation": {
+    "/Operation/ForAccount": {
       "get": {
         "tags": [
           "Operation"
@@ -480,7 +480,67 @@
             }
           }
         }
-      },
+      }
+    },
+    "/Operation/ForAsset": {
+      "get": {
+        "tags": [
+          "Operation"
+        ],
+        "parameters": [
+          {
+            "name": "startDate",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "date-time"
+            }
+          },
+          {
+            "name": "endDate",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "date-time"
+            }
+          },
+          {
+            "name": "broker",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "asset",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/OperationDto"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/Operation": {
       "delete": {
         "tags": [
           "Operation"
@@ -551,6 +611,10 @@
             "format": "double"
           },
           "category": {
+            "type": "string",
+            "nullable": true
+          },
+          "asset": {
             "type": "string",
             "nullable": true
           }
